force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <label>Warranty</label>
    <nameField>
        <displayFormat>WAR{000000}</displayFormat>
        <label>Warranty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>