force-app/main/default/objects/Warranty__c/fields/Warranty_End__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End__c</fullName>
    <formula>Warranty_Start__c +  Warranty_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty End</label>
    <type>Date</type>
</CustomField>