force-app/main/default/objects/Warranty__c/fields/Warranty_Start__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start__c</fullName>
    <label>Warranty Start</label>
    <type>Date</type>
</CustomField>